src/test/deca/context/valid/created/decl_class/return_bool_void.deca
// Description :
//    return mauvais type : void, demandé bool
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: (2.7) Type de retour effectif : void, déclaré : boolean

class A{
boolean met(){
}
}