src/test/deca/context/invalid/created/binary_exp/op_comp/neq_null_int.deca
// Description :
//    test neq entre un null et un int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) Opérandes de type null, int, attendu: (int|float, int|float) ou (class|null, class|null) ou (bool, bool)

{

int b;
boolean c = null != b;
}
